# vocabbie

./: .gitignore  Cargo.toml  README.md  Rocket.toml  script.txt
doc/: .~lock.2021级课程设计题目.pptx#  2021级课程设计题目.pptx  grab1.png~  lifecycle.drawio  method1.drawio  scatter1.drawio  structure1.drawio  ui.drawio  ~$211-32106300004-张景致.doc  ~$211-32106300004-张景致.docx  ~WRL3873.tmp  班级-组长学号-组长名（报告模版） .doc  软件211-32106300004-张景致.doc  软件211-32106300004-张景致.docx
vcbe-client/: Cargo.toml
vcbe-client/src/: main.rs
vcbe-core/: Cargo.toml
vcbe-core/src/: lib.rs
vcbe-eval/: Cargo.toml
vcbe-eval/src/: main.rs
vcbe-gen/: Cargo.toml
vcbe-gen/src/: main.rs
vcbe-server/: Cargo.toml
vcbe-server/src/: common.rs  index.html  main.rs  mass_recall.rs  recall.rs  standard.rs  tyv-broad.rmp  tyv-narrow.rmp
