[package]
name = "vcbe-gen"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.21"
env_logger = "0.11.3"
serde = { version = "1.0.203", features = ["derive", "alloc"] }
serde_json = "1.0.117"
rmp-serde = "1.3.0"
zstd = "0.13.1"
rapidfuzz = "0.5.0"
indicatif = "0.17.8"
rayon = "1.10.0"
# mysql = "25.0.1"

vcbe-core = { path = "../vcbe-core" }